# PhysNetSim

./: pyproject.toml  run_double_pendulum.py  run_schrodinger_2d.py
physnet/: simulator.py  solver.py
physnet/problems/: double_pendulum.py  schrodinger_2d.py
